Fix scrollbars

--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ body {
 .receivers {
   margin: 50px 0;
   padding: 0.5rem;
-  overflow: scroll;
 
   display: flex;
   flex-direction: column;
